# MYNT_EYE_D-Cameras-Evaluation-tool

./: .gitignore  CMakeLists.txt  ReadMe.md  ReadMe_ch.md  cleanLogs.sh
inc/: MYNT_CameraIMU.h  Viewer.h
src/: MYNT_CameraIMU.cc  Viewer.cc  main.cc
